## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = tunerr

tunerr_SOURCES = \
	tunerr.cpp\
	Rule.cc\
	Rule.h\
	Packet.cc\
	Packet.h\
	RuleSet.cc\
	RuleSet.h\
	Matcher.cc\
	Matcher.h\
	RuleNetwork.cc\
	RuleNetwork.h\
	RuleDiscard.cc\
	RuleDiscard.h\
	MatcherIP.cc\
	MatcherIP.h\
	TunErr.cc\
	TunErr.h\
	PacketTransport.cc\
	PacketTransport.h\
	PacketTCP.cc\
	PacketTCP.h\
	PacketUDP.cc\
	PacketUDP.h\
	MatcherUDP.cc\
	MatcherUDP.h\
	MatcherTCP.cc\
	MatcherTCP.h\
	MatcherAND.cc\
	MatcherAND.h\
	MatcherOR.cc\
	MatcherOR.h\
	MatcherNOT.cc\
	MatcherNOT.h\
	RuleDebug.cc\
	RuleDebug.h\
	Config.cc\
	Config.h\
	RuleFactory.cc\
	RuleFactory.h\
	Randomizer.cc\
	Randomizer.h\
	RuleError.cc\
	RuleError.h\
	TimeTunnel.cc\
	TimeTunnel.h\
	RuleNothing.cc\
	RuleNothing.h\
	MatcherALL.cc\
	MatcherALL.h

tunerr_LDFLAGS = 

tunerr_LDADD = \
	 -lipq

